@@ -1,1 +1,1 @@
-DIST elementary-xfce-icon-theme-0.4.tar.gz 6304810 SHA256 2df47aaba6441d107eb2bc203da9b61ff4ee5cf760f35c17a105ed507bd48b84 SHA512 e0c5b05ceba8f42e9effcf48f1a10d354084dfb5c377162491cbb312188c79570c76c944df86992626fd4a80a761b9ed833cfc69882c3923ad471e91200691e8 WHIRLPOOL b36180e55d9a85d8e3b6ff500fd8d8db5208818ef55b6917b1de27913c79d62b492cb418b3ce647903548c96476c5ee397275777c50d720fc8b99e91d39fd1d1
+DIST elementary-xfce-icon-theme-0.4_p20141512.tar.gz 7332748 SHA256 accca089d46e073f408a58700dc59e817b77ec9652f31223089ded9de1a04f81 SHA512 c9666c0e19641bc3da290de85e86e489f53c3a6e8d1a9fb803d90b184c1a56a9ff5a64260cf1430f853cd58f5c65c98802a3dbed59eb88765fc1a89268fa7bf0 WHIRLPOOL 483ce100f589f93067e971f5068110bac4bb109467b81b6d7e33fb71099681d5dc4a772cb8df2c124278bf0ae98761f114ddb6343a2c8485d7fcc7f749e079f3
