@@ -1,6 +1,13 @@
 # ChangeLog for x11-themes/elementary-xfce-icon-theme
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*elementary-xfce-icon-theme-0.4_p20141512 (06 Jan 2015)
+
+  06 Jan 2015; Denis Dupeyron <calchan@gentoo.org>
+  -elementary-xfce-icon-theme-0.4.ebuild,
+  +elementary-xfce-icon-theme-0.4_p20141512.ebuild:
+  Version bump
 
   03 Oct 2014; <calchan@gentoo.org> elementary-xfce-icon-theme-0.4.ebuild:
   Fix and improve SRC_URI.
